--- a/kubernetes/04-backend-deployment.yaml
+++ b/kubernetes/04-backend-deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: timursamanchi/quote-backend:v123
+          image: timursamanchi/quote-backend:abc
           ports:
             - containerPort: 8080
           resources:
