--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -48,3 +48,36 @@ redis:
 
   service:
     type: ClusterIP
+
+backend:
+  name: quote-backend
+  replicaCount: 1
+
+  image:
+    repository: timursamanchi/quote-backend
+    tag: abc
+    pullPolicy: Always
+
+  ports:
+    http: 8080
+
+  resources:
+    requests:
+      cpu: "100m"
+      memory: "128Mi"
+    limits:
+      cpu: "500m"
+      memory: "512Mi"
+
+  probes:
+    path: /quote
+    readiness:
+      initialDelaySeconds: 5
+      timeoutSeconds: 2
+      periodSeconds: 10
+      failureThreshold: 3
+    liveness:
+      initialDelaySeconds: 10
+      timeoutSeconds: 2
+      periodSeconds: 15
+      failureThreshold: 3
