--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -90,3 +90,9 @@ backend:
     # targetPort defaults to port if not set
     # targetPort: 8080
     annotations: {}
+    
+  autoscaling:
+    enabled: true
+    minReplicas: 1
+    maxReplicas: 5
+    targetCPUUtilizationPercentage: 50
