--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -90,9 +90,55 @@ backend:
     # targetPort defaults to port if not set
     # targetPort: 8080
     annotations: {}
-    
+
   autoscaling:
     enabled: true
     minReplicas: 1
     maxReplicas: 5
+    targetCPUUtilizationPercentage: 50
+
+##########################
+frontend:
+  name: quote-frontend
+  replicaCount: 1
+
+  image:
+    repository: timursamanchi/quote-frontend
+    tag: abc
+    pullPolicy: Always
+
+  ports:
+    http: 80
+
+  resources:
+    requests:
+      cpu: "100m"
+      memory: "128Mi"
+    limits:
+      cpu: "500m"
+      memory: "512Mi"
+
+  probes:
+    path: /
+    readiness:
+      initialDelaySeconds: 5
+      timeoutSeconds: 2
+      periodSeconds: 10
+      failureThreshold: 3
+    liveness:
+      initialDelaySeconds: 10
+      timeoutSeconds: 2
+      periodSeconds: 15
+      failureThreshold: 3
+
+  service:
+    type: ClusterIP
+    port: 80
+    # targetPort: 80   # (optional; defaults to frontend.ports.http)
+    annotations: {}
+
+  autoscaling:
+    enabled: true
+    minReplicas: 1
+    maxReplicas: 3
     targetCPUUtilizationPercentage: 50
